clean up and added disclaimer

--- a/USAidProjects/res/values/usaid_projects_strings.xml
+++ b/USAidProjects/res/values/usaid_projects_strings.xml
@@ -5,6 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="usaid_image">image</string>
     
+    <string name="usaid_disclaimer">Disclaimer: The geographic names and boundaries may not reflect the views of the United States Government on the sovereignty over geographic features.\n\nAbout the Map: This map depicts USAID-funded projects to monitor development results; improve aid effectiveness and coordination; and enhance transparency and social accountability. Only a subset of USAID’s missions were chosen to participate in the initial deployment of the application and the map may not include all of the USAID projects in a given country.  Over time the intent is to display a comprehensive portfolio of agency projects on the map.</string>
+    
     <!-- buttons -->
     <string name="usaid_button_title_locations">Locations</string>
     <string name="usaid_button_title_sectors">Sectors</string>
@@ -16,68 +18,6 @@
     <!--  connection  -->
     <string name="usaid_connection_server">Connecting To Server ...</string>
     <string name="usaid_cache_nodata">Currently, there is no cached data.</string>
-    
-    <!-- countries 
-    <string name="usaid_action_filter_country">Country</string>
-    <string name="usaid_action_filter_country_afghanistan">Afghanistan</string>
-    <string name="usaid_action_filter_country_albania">Albania</string>
-    <string name="usaid_action_filter_country_angola">Angola</string>
-    <string name="usaid_action_filter_country_armenia">Armenia</string>
-    <string name="usaid_action_filter_country_bangladesh">Bangladesh</string>
-    <string name="usaid_action_filter_country_belarus">Belarus</string>
-    <string name="usaid_action_filter_country_brazil">Brazil</string>
-    <string name="usaid_action_filter_country_burma">Burma</string>
-    <string name="usaid_action_filter_country_cambodia">Cambodia</string>
-    <string name="usaid_action_filter_country_chad">Chad</string>
-    <string name="usaid_action_filter_country_colombia">Colombia</string>
-    <string name="usaid_action_filter_country_dominican_republic">Dominican Republic</string>
-    <string name="usaid_action_filter_country_congo">Congo DR</string>
-    <string name="usaid_action_filter_country_ecuador">Ecuador</string>
-    <string name="usaid_action_filter_country_egypt">Egypt</string>
-    <string name="usaid_action_filter_country_el_salvador">El Salvador</string>
-    <string name="usaid_action_filter_country_ethiopia">Ethiopia</string>
-    <string name="usaid_action_filter_country_georgia">Georgia</string>
-    <string name="usaid_action_filter_country_ghana">Ghana</string>
-    <string name="usaid_action_filter_country_guatemala">Guatemala</string>
-    <string name="usaid_action_filter_country_haiti">Haiti</string>
-    <string name="usaid_action_filter_country_india">India</string>
-    <string name="usaid_action_filter_country_indonesia">Indonesia</string>
-    <string name="usaid_action_filter_country_iraq">Iraq</string>
-    <string name="usaid_action_filter_country_kazakhstan">Kazakhstan</string>
-    <string name="usaid_action_filter_country_kenya">Kenya</string>
-    <string name="usaid_action_filter_country_kyrgyzstan">Kyrgyzstan</string>
-    <string name="usaid_action_filter_country_lebanon">Lebanon</string>
-    <string name="usaid_action_filter_country_liberia">Liberia</string>
-    <string name="usaid_action_filter_country_mali">Mali</string>
-    <string name="usaid_action_filter_country_mauritania">Mauritania</string>
-    <string name="usaid_action_filter_country_mexico">Mexico</string>
-    <string name="usaid_action_filter_country_moldova">Moldova</string>
-    <string name="usaid_action_filter_country_montenegro">Montenegro</string>
-    <string name="usaid_action_filter_country_morocco">Morocco</string>
-    <string name="usaid_action_filter_country_mozambique">Mozambique</string>
-    <string name="usaid_action_filter_country_nepal">Nepal</string>
-    <string name="usaid_action_filter_country_nicaragua">Nicaragua</string>
-    <string name="usaid_action_filter_country_niger">Niger</string>
-    <string name="usaid_action_filter_country_nigeria">Nigeria</string>
-    <string name="usaid_action_filter_country_pakistan">Pakistan</string>
-    <string name="usaid_action_filter_country_paraguay">Paraguay</string>
-    <string name="usaid_action_filter_country_peru">Peru</string>
-    <string name="usaid_action_filter_country_philippines">Philippines</string>
-    <string name="usaid_action_filter_country_rwanda">Rwanda</string>
-    <string name="usaid_action_filter_country_senegal">Senegal</string>
-    <string name="usaid_action_filter_country_serbia">Serbia</string>
-    <string name="usaid_action_filter_country_south_africa">South Africa</string>
-    <string name="usaid_action_filter_country_south_sudan">South Sudan</string>
-    <string name="usaid_action_filter_country_sri_lanka">Sri Lanka</string>
-    <string name="usaid_action_filter_country_tajikistan">Tajikistan</string>
-    <string name="usaid_action_filter_country_tanzania">Tanzania</string>
-    <string name="usaid_action_filter_country_timor_leste">Timor-Leste</string>
-    <string name="usaid_action_filter_country_turkmenistan">Turkmenistan</string>
-    <string name="usaid_action_filter_country_uganda">Uganda</string>
-    <string name="usaid_action_filter_country_uzbekistan">Uzbekistan</string>
-    <string name="usaid_action_filter_country_vietnam">Vietnam</string>
-    <string name="usaid_action_filter_country_gaza">WB Gaza</string>
-    <string name="usaid_action_filter_country_zimbabwe">Zimbabwe</string>  -->
     
     <!-- filter strings -->
     <string name="usaid_filter_start_date_label">Start Date</string>
@@ -104,16 +44,7 @@
     <string name="project_dialog_sector">Sector</string>
     <string name="project_dialog_primary_partner">Primary Partner</string>
     <string name="project_dialog_obligated">Obligated</string>
-    
-    <!-- regions
-    <string name="usaid_action_filter_region">Region</string>
-    <string name="usaid_action_filter_region_afganistan_pakistan">AFGHANISTAN AND PAKISTAN</string>
-    <string name="usaid_action_filter_region_asia">ASIA</string>
-    <string name="usaid_action_filter_region_europe">EUROPE AND EURASIA</string>
-    <string name="usaid_action_filter_region_latin_america">LATIN AMERICA AND THE CARIBBEAN</string>
-    <string name="usaid_action_filter_region_middle_east">MIDDLE EAST</string>
-    <string name="usaid_action_filter_region_africa">SUB SAHARAN AFRICA</string>
- -->    
+  
     <!-- section titles -->
     <string name="title_section1">Home</string>
     <string name="title_section2">Map</string>
