--- a/USAidProjects/res/values/usaid_projects_styles.xml
+++ b/USAidProjects/res/values/usaid_projects_styles.xml
@@ -27,5 +27,9 @@
         parent="@android:style/TextAppearance.Medium" >
         <item name="android:typeface">monospace</item>
     </style>
+    
+    <style name="usaid_medium_text.bold">
+        <item name="android:textStyle">bold</item>
+    </style>
 
 </resources>
