--- a/USAidProjects/res/layout/usaid_list_item.xml
+++ b/USAidProjects/res/layout/usaid_list_item.xml
@@ -25,23 +25,25 @@
          />
 -->
 
+    <CheckBox
+        android:id="@+id/lblCheckbox"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true" />
+
 	<TextView
 	    android:id="@+id/lblListItem"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentLeft="true"
-	    android:gravity="center_vertical"
+        android:layout_toLeftOf="@id/lblCheckbox"
 	    android:paddingBottom="5dp"
 	    android:paddingLeft="30dp"
 	    android:paddingTop="5dp"
 	    android:textSize="17sp" />
 	
-	<CheckBox
-	    android:id="@+id/lblCheckbox"
-	    android:layout_width="30dp"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:layout_alignParentRight="true" />
+	
  
 </RelativeLayout>
 
