--- a/USAidProjects/res/layout/usaid_country_projects.xml
+++ b/USAidProjects/res/layout/usaid_country_projects.xml
@@ -11,8 +11,7 @@
         android:layout_centerHorizontal="true"
         android:padding="4dp"
         android:textSize="16sp"
-        android:textStyle="bold"
-         />
+        android:textStyle="bold" />
     
     <ListView
         android:id="@android:id/list"
