--- a/USAidProjects/res/layout/usaid_country_item.xml
+++ b/USAidProjects/res/layout/usaid_country_item.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/usaid_country_flag"
+        android:layout_centerVertical="true"
         android:maxLines="1"
         android:layout_marginLeft="4sp" />
     
