--- a/USAidProjects/res/layout/usaid_project_view.xml
+++ b/USAidProjects/res/layout/usaid_project_view.xml
@@ -63,9 +63,9 @@
         android:id="@+id/dialog_project_sector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/dialog_project_end"
-        android:layout_alignLeft="@id/dialog_project_end"
-        android:paddingLeft="32dp"
+        android:layout_below="@id/dialog_project_image"
+        android:paddingTop="4dp"
+        android:paddingLeft="8dp"
         android:text="@string/project_dialog_sector" />
     
     <TextView
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/dialog_project_sector"
         android:layout_alignLeft="@id/dialog_project_sector"
-        android:paddingLeft="32dp" />
+        android:paddingLeft="8dp" />
     
     <TextView
         android:id="@+id/dialog_project_primary_partner"
@@ -82,6 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/dialog_project_sector_data"
         android:layout_alignLeft="@id/dialog_project_image"
+        android:paddingTop="4dp"
         android:paddingLeft="8dp"
         android:text="@string/project_dialog_primary_partner" />
     
@@ -91,7 +92,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/dialog_project_primary_partner"
         android:paddingLeft="8dp"
-        android:layout_alignLeft="@id/dialog_project_primary_partner" />
+        android:layout_alignLeft="@id/dialog_project_primary_partner"
+        android:layout_toLeftOf="@+id/dialog_project_obligated_data" />
     
     <TextView
         android:id="@+id/dialog_project_obligated"
@@ -99,7 +101,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/dialog_project_sector_data"
         android:layout_alignParentRight="true"
-        android:paddingRight="16dp"
+        android:paddingRight="30dp"
+        android:paddingTop="4dp"
         android:text="@string/project_dialog_obligated" />
     
     <TextView
