--- a/USAidProjects/res/layout/usaid_country_projects.xml
+++ b/USAidProjects/res/layout/usaid_country_projects.xml
@@ -11,7 +11,8 @@
         android:layout_centerHorizontal="true"
         android:padding="4dp"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:background="#C0C0C0" />
     
     <ListView
         android:id="@android:id/list"
